--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "swiftmailer/swiftmailer": "~5.4.3",
     "ramsey/uuid": "~3.5.0",
     "mischiefcollective/colorjizz": "~1.0.0",
-    "league/uri": "^4.2"
+    "psr/http-message": "~1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.5.0",
