--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_script:
   - travis_retry pecl install stats-1.0.3
   - travis_retry pecl install gearman-1.0.3
   - yes '' | travis_retry pecl install apcu-4.0.10
+  - travis_retry pecl -q install mongodb-1.2.0alpha3
   - phpenv config-add tests/travis/php.ini
   - npm install -g autoprefixer@4.0.0
   - npm install -g uglify-js@2.4.13
