--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -1,11 +1,10 @@
-
 cm:
   build:
     image: cargomedia/cm-ci:v1
     dockerfile: Dockerfile
   cached: true
-  volumes:
-    - ./tmp/data/cm:/app/cm/data
+  volumes_from:
+    - shared_data
   links:
     - mysql
     - mongo
@@ -16,42 +15,55 @@ cm:
 
 mysql:
   image: mysql:5.5.54
+  cached: true
   environment:
     MYSQL_ROOT_PASSWORD: docker
-  volumes:
-    - ./tmp/data/mysql:/var/lib/mysql
-    - ./docker/config/mysql/conf.d:/etc/mysql/conf.d
-  ports:
-    - "3306:3306"
+  volumes_from:
+    - shared_data
 
 mongo:
   image: mongo:2.6.12
+  cached: true
   command: "--config /mongo/config/mongod.conf"
-  volumes:
-    - ./tmp/data/mongo:/data/db
-    - ./docker/config/mongo:/mongo/config
-  ports:
-    - "27017:27017"
+  volumes_from:
+    - shared_data
 
 memcached:
   image: memcached:1.4
+  cached: true
   command: "-p 11211 -m 2048 -u memcache -l 0.0.0.0 -c 10000 -v"
 
 elasticsearch:
   image: elasticsearch:1.3.9
-  volumes:
-    - ./tmp/data/elasticsearch:/usr/share/elasticsearch/data
-    - ./docker/config/elasticsearch:/usr/share/elasticsearch/config
+  volumes_from:
+    - shared_data
 
 redis:
   image: redis:3.2.6
+  cached: true
   command: '/redis/config/redis.conf'
-  volumes:
-    - ./tmp/data/redis:/data
-    - ./docker/config/redis/redis.conf:/redis/config/redis.conf
+  volumes_from:
+    - shared_data
 
 gearman:
   image: pataquets/gearmand:latest
+  cached: true
   command: "--job-retries=25 -q libsqlite3 --libsqlite3-db=/gearman/data/db.sqlite3"
+  volumes_from:
+    - shared_data
+
+shared_data:
+  build:
+    image: cargomedia/cm-ci-data:v1
+    dockerfile: Dockerfile.data
   volumes:
-    - ./tmp/data/gearman:/gearman/data
+#    - ./tmp/data/cm:/app/cm/data
+#    - ./tmp/data/redis:/data
+#    - ./tmp/data/elasticsearch:/usr/share/elasticsearch/data
+#    - ./tmp/data/gearman:/gearman/data
+#    - ./tmp/data/mongo:/data/db
+#    - ./tmp/data/mysql:/var/lib/mysql
+    - ./docker/config/redis/redis.conf:/redis/config/redis.conf
+    - ./docker/config/elasticsearch:/usr/share/elasticsearch/config
+    - ./docker/config/mongo:/mongo/config
+    - ./docker/config/mysql/conf.d:/etc/mysql/conf.d
