--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -3,8 +3,11 @@ cm:
     image: cargomedia/cm-ci:v1
     dockerfile: Dockerfile
   cached: true
+  volumes:
+    - ./resources/config/_local.docker.php:/app/cm/resources/config/local.docker.php
+    - ./resources/config/_test.docker.php:/app/cm/resources/config/test.docker.php
   volumes_from:
-    - shared_data
+      - shared_data
   links:
     - mysql
     - mongo
@@ -18,6 +21,8 @@ mysql:
   cached: true
   environment:
     MYSQL_ROOT_PASSWORD: docker
+  volumes:
+    - ./docker/config/mysql/conf.d:/etc/mysql/conf.d
   volumes_from:
     - shared_data
 
@@ -25,6 +30,8 @@ mongo:
   image: mongo:2.6.12
   cached: true
   command: "--config /mongo/config/mongod.conf"
+  volumes:
+    - ./docker/config/mongo:/mongo/config
   volumes_from:
     - shared_data
 
@@ -35,6 +42,8 @@ memcached:
 
 elasticsearch:
   image: elasticsearch:1.3.9
+  volumes:
+    - ./docker/config/elasticsearch:/usr/share/elasticsearch/config
   volumes_from:
     - shared_data
 
@@ -42,6 +51,8 @@ redis:
   image: redis:3.2.6
   cached: true
   command: '/redis/config/redis.conf'
+  volumes:
+    - ./docker/config/redis/redis.conf:/redis/config/redis.conf
   volumes_from:
     - shared_data
 
@@ -56,14 +67,3 @@ shared_data:
   build:
     image: cargomedia/cm-ci-data:v1
     dockerfile: Dockerfile.data
-  volumes:
-#    - ./tmp/data/cm:/app/cm/data
-#    - ./tmp/data/redis:/data
-#    - ./tmp/data/elasticsearch:/usr/share/elasticsearch/data
-#    - ./tmp/data/gearman:/gearman/data
-#    - ./tmp/data/mongo:/data/db
-#    - ./tmp/data/mysql:/var/lib/mysql
-    - ./docker/config/redis/redis.conf:/redis/config/redis.conf
-    - ./docker/config/elasticsearch:/usr/share/elasticsearch/config
-    - ./docker/config/mongo:/mongo/config
-    - ./docker/config/mysql/conf.d:/etc/mysql/conf.d
