--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -5,9 +5,12 @@
       command: ./app-setup.sh
     - type: parallel
       steps:
-      - name: test_AM
+      - name: "test 1/3"
         service: cm
-        command: ./test.sh --filter='^CM_[A-M]'
-      - name: test_NZ
+        command: "./test.sh 1/3"
+      - name: "test 2/3"
         service: cm
-        command: ./test.sh --filter='^CM_[N-Z]'
+        command: "./test.sh 2/3"
+      - name: "test 3/3"
+        service: cm
+        command: "./test.sh 3/3"
