--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "elasticsearch/elasticsearch": "~2.0.0",
     "guzzlehttp/guzzle": "~6.0",
     "kickbox/kickbox": "~1.0.3",
-    "tomaszdurka/codegenerator": "dev-variadic_support",
+    "tomaszdurka/codegenerator": "~0.5.0",
     "jenssegers/agent": "~2.3.1",
     "fluent/logger": "~1.0.1",
     "predis/predis": "~1.0.3",
@@ -31,18 +31,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~5.5.0",
-    "tomaszdurka/mocka": "dev-variadic_support"
+    "tomaszdurka/mocka": "~0.12.3"
   },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url" : "git@github.com:fvovan/mocka.git"
-    },
-    {
-      "type": "vcs",
-      "url" : "git@github.com:fvovan/codegenerator.git"
-    }
-  ],
   "autoload": {
     "psr-0": {
       "CM_": "library/",
