Use a specific codefresh composition file

--- a/codefresh.yml
+++ b/codefresh.yml
@@ -3,16 +3,16 @@ steps:
 
   test-services:
     title: Test CM application
-    type: launch-composition
-    composition: ./docker-compose.yml
+    type: composition
+    composition: ./docker-compose.test.yml
     composition_candidates:
       cm:
         image: cargomedia/cm-application:latest
         command: '/app/cm/ci/test.sh'
         working_dir: /app/cm
         volumes:
-          - .:/app/cm:rw,cached
-          - ./resources/config/_test.docker.php:/app/cm/resources/config/test.docker.php
-          - ./resources/config/_local.docker.php:/app/cm/resources/config/local.docker.php
-          - ./docker/config/php:/usr/local/etc/php
+          - ${{main_clone}}:/app/cm:rw,cached
+          - ${{main_clone}}/resources/config/_test.docker.php:/app/cm/resources/config/test.docker.php
+          - ${{main_clone}}/resources/config/_local.docker.php:/app/cm/resources/config/local.docker.php
+          - ${{main_clone}}/docker/config/php:/usr/local/etc/php
           - data-cm:/app/cm/data
