--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -3,12 +3,7 @@ services:
 
   cm:
     image: cargomedia/cm-application:latest
-    command: '/docker-run-php5-fpm'
     volumes:
-      - .:/app/cm
-      - ${{main_clone}}/resources/config/_test.docker.php:/app/cm/resources/config/test.docker.php
-      - ${{main_clone}}/resources/config/_local.docker.php:/app/cm/resources/config/local.docker.php
-      - ${{main_clone}}/docker/config/php:/usr/local/etc/php
       - data-cm:/app/cm/data
     depends_on:
       - mysql
@@ -17,41 +12,30 @@ services:
       - elasticsearch
       - redis
       - gearman
-    environment:
-      PHP_IDE_CONFIG: serverName=docker.cm.dev
-    working_dir: '/app/cm'
 
   mysql:
-    image: mysql:5.5.54
-    environment:
-      MYSQL_ROOT_PASSWORD: docker
+    image: ${{build-mysql}}
     volumes:
       - data-mysql:/var/lib/mysql
-      - ${{main_clone}}/docker/config/mysql/conf.d:/etc/mysql/conf.d
 
   mongo:
-    image: mongo:2.6.12
-    command: "--config /mongo/config/mongod.conf"
+    image: ${{build-mongo}}
     volumes:
       - data-mongo:/data/db
-      - ${{main_clone}}/docker/config/mongo:/mongo/config
+
+  elasticsearch:
+    image: ${{build-elasticsearch}}
+    volumes:
+      - data-elasticsearch:/usr/share/elasticsearch/data
+
+  redis:
+    image: ${{build-redis}}
+    volumes:
+      - data-redis:/data
 
   memcached:
     image: memcached:1.4
     command: "-p 11211 -m 2048 -u memcache -l 0.0.0.0 -c 10000 -v"
-
-  elasticsearch:
-    image: elasticsearch:1.3.9
-    volumes:
-      - data-elasticsearch:/usr/share/elasticsearch/data
-      - ${{main_clone}}/docker/config/elasticsearch:/usr/share/elasticsearch/config
-
-  redis:
-    image: redis:3.2.6
-    command: '/redis/config/redis.conf'
-    volumes:
-      - data-redis:/data
-      - ${{main_clone}}/docker/config/redis/redis.conf:/redis/config/redis.conf
 
   gearman:
     image: pataquets/gearmand:latest
