--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,44 +23,30 @@ services:
     mem_reservation: 512m
 
   mysql:
-    image: mysql:5.5.54
-    environment:
-      MYSQL_ROOT_PASSWORD: docker
+    image: cargomedia/mysql:5.5.54
     volumes:
       - data-mysql:/var/lib/mysql
-      - ./docker/config/mysql/conf.d:/etc/mysql/conf.d
-    ports:
-      - "3306:3306"
 
   mongo:
-    image: mongo:2.6.12
-    command: "--config /mongo/config/mongod.conf"
+    image: cargomedia/mongo:2.6.12
     volumes:
       - data-mongo:/data/db
-      - ./docker/config/mongo:/mongo/config
-    ports:
-      - "27017:27017"
 
   memcached:
-    image: memcached:1.4
-    command: "-p 11211 -m 2048 -u memcache -l 0.0.0.0 -c 10000 -v"
+    image: cargomedia/memcached:1.4
 
   elasticsearch:
-    image: elasticsearch:1.3.9
+    image: cargomedia/elasticsearch:1.3.9
     volumes:
       - data-elasticsearch:/usr/share/elasticsearch/data
-      - ./docker/config/elasticsearch:/usr/share/elasticsearch/config
 
   redis:
-    image: redis:3.2.6
-    command: '/redis/config/redis.conf'
+    image: cargomedia/redis:3.2.6
     volumes:
       - data-redis:/data/redis
-      - ./docker/config/redis/redis.conf:/redis/config/redis.conf
 
   gearman:
-    image: pataquets/gearmand:latest
-    command: "--job-retries=25 -q libsqlite3 --libsqlite3-db=/gearman/data/db.sqlite3"
+    image: cargomedia/gearman:latest
     volumes:
       - data-gearman:/gearman/data
 
@@ -71,3 +57,4 @@ volumes:
   data-mongo:
   data-gearman:
   data-elasticsearch:
+  config-elasticsearch:
