--- a/tests/travis/php.ini
+++ b/tests/travis/php.ini
@@ -2,6 +2,7 @@ extension = "memcache.so"
 extension = "redis.so"
 extension = "runkit.so"
 extension = "mongo.so"
+extension = "timecop.so"
 
 ; Disabling APC to avoid an APC + Phar issue with composer, see https://github.com/cargomedia/CM/pull/1461
 apc.enable_cli = 0
