--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~5.5.0",
-    "tomaszdurka/mocka": "~0.12.3"
+    "tomaszdurka/mocka": "~0.12.3",
+    "phpunit/phpunit-mock-objects": "3.4.x-dev"
   },
   "autoload": {
     "psr-0": {
