--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~5.7.0",
-    "tomaszdurka/mocka": "~0.12.3",
-    "phpunit/phpunit-mock-objects": "~3.4.4"
+    "tomaszdurka/mocka": "~0.12.3"
   },
   "autoload": {
     "psr-0": {
